Fixing icons on safari

--- a/src/ui/RefreshButton/RefreshButton.css
+++ b/src/ui/RefreshButton/RefreshButton.css
@@ -1,19 +1,20 @@
-.refreshButtonContainer {
+.flexRefreshContainer {
   display: flex;
   justify-content: center;
-  box-sizing: border-box;
+}
+
+.refreshButtonContainer {
   margin-bottom: 5em;
+  width: 2.5em;
+  height: 2.5em;
 }
 
 .refreshButton {
   background-color: #FDF7C3;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 100% 100%;
   box-shadow: 2px 2px 5px grey;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .refreshButton:active {
@@ -21,6 +22,6 @@
 }
 
 .refreshIcon {
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
 }
